--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ionic/react": "^7.5.6",
     "eventemitter3": "^5.0.1",
+    "ionicons": "^7.2.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
