--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@ionic/react": "^7.5.6",
     "eventemitter3": "^5.0.1",
+    "howler": "^2.2.4",
     "ionicons": "^7.2.1",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "rehowl": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "latest",
